Update tests, pages, and package files; remove unused Claude agents

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.56.2",
     "@types/node": "^24.0.10"
+  },
+  "dependencies": {
+    "clean": "^4.0.2"
   }
 }
